--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,88 @@
 {
     "Lua.diagnostics.disable": [
         "undefined-field"
+    ],
+    "Lua.diagnostics.globals": [
+        "MainMenuBar",
+        "MultiBarBottomLeft",
+        "StatusTrackingBarManager",
+        "GameTooltip",
+        "PlayerCastingBarFrame",
+        "CharacterFrame",
+        "PlayerName",
+        "PlayerFrame",
+        "GameTooltip_SetTitle",
+        "GameTooltip_AddColoredLine",
+        "GameTooltip_AddBlankLineToTooltip",
+        "GameTooltip_AddHighlightLine",
+        "NORMAL_FONT_COLOR",
+        "BLUE_FONT_COLOR",
+        "RENOWN_LEVEL_LABEL",
+        "MAJOR_FACTION_BUTTON_TOOLTIP_NEXT_REWARDS",
+        "GameTooltip_AddNormalLine",
+        "MAJOR_FACTION_RENOWN_TOOLTIP_PROGRESS",
+        "RenownRewardUtil",
+        "GenerateClosure",
+        "CreateSimpleTextureMarkup",
+        "DEFAULT_CHAT_FRAME",
+        "SELECTED_CHAT_FRAME",
+        "GameFontNormal",
+        "GameFontHighlight",
+        "ACCEPT",
+        "CANCEL",
+        "Settings",
+        "InterfaceOptions_AddCategory",
+        "GameFontHighlightLarge",
+        "GameFontHighlightSmall",
+        "SlashCmdList",
+        "hash_SlashCmdList",
+        "CLOSE",
+        "GameFontDisableSmall",
+        "GameFontNormalSmall",
+        "FONT_COLOR_CODE_CLOSE",
+        "SetDesaturation",
+        "ColorPickerFrame",
+        "OpacitySliderFrame",
+        "ChatFontNormal",
+        "OKAY",
+        "NOT_BOUND",
+        "COMBATLOG_OBJECT_REACTION_FRIENDLY",
+        "COMBATLOG_OBJECT_TYPE_PLAYER",
+        "COMBATLOG_OBJECT_TYPE_PET",
+        "COMBATLOG_OBJECT_CONTROL_PLAYER",
+        "WorldFrame",
+        "MAX_RAID_MEMBERS",
+        "MAX_PARTY_MEMBERS",
+        "COMBATLOG_OBJECT_AFFILIATION_MINE",
+        "ObjectPoolMixin",
+        "CreateTexturePool",
+        "CreateFramePool",
+        "AnimateTexCoords",
+        "GetCursorPosition",
+        "SecureButton_GetUnit",
+        "BOOKTYPE_SPELL",
+        "NORMAL_FONT_COLOR_CODE",
+        "SettingsRegistrar",
+        "SetPortraitToTexture",
+        "CreateFrame",
+        "C_Timer",
+        "UIParent",
+        "hooksecurefunc",
+        "RAID_CLASS_COLORS",
+        "C_MountJournal",
+        "InCombatLockdown",
+        "UnitAura",
+        "format",
+        "UnitBuff",
+        "C_UnitAuras",
+        "UnitIsPlayer",
+        "UnitPlayerControlled",
+        "UnitName",
+        "UnitClass",
+        "abs",
+        "C_GamePad",
+        "C_ZoneAbility",
+        "PlaySound",
+        "GetFactionInfoByID"
     ]
 }
