调整代码的位置

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -103,6 +103,94 @@
         "EMPTY",
         "TARGET",
         "TOOLTIP_UPDATE_TIME",
-        "GameTooltip_UnitColor"
+        "GameTooltip_UnitColor",
+        "geterrorhandler",
+        "IsLoggedIn",
+        "Ambiguate",
+        "C_ChatInfo",
+        "GetTime",
+        "GetFramerate",
+        "UnitInRaid",
+        "UnitInParty",
+        "GetRealmName",
+        "UnitRace",
+        "UnitFactionGroup",
+        "GetCurrentRegion",
+        "GetLocale",
+        "wipe",
+        "BackdropTemplateMixin",
+        "PlaySoundFile",
+        "GetCursorInfo",
+        "ClearCursor",
+        "GetSpellInfo",
+        "GetMacroInfo",
+        "IsShiftKeyDown",
+        "IsControlKeyDown",
+        "IsAltKeyDown",
+        "CreateFont",
+        "issecurevariable",
+        "tInvert",
+        "time",
+        "UnitGUID",
+        "GetUnitSpeed",
+        "UnitIsUnit",
+        "bit",
+        "WOW_PROJECT_ID",
+        "WOW_PROJECT_CLASSIC",
+        "strsplit",
+        "CombatLogGetCurrentEventInfo",
+        "UnitHealth",
+        "UnitHealthMax",
+        "min",
+        "IsInGroup",
+        "IsInRaid",
+        "GetBuildInfo",
+        "CopyTable",
+        "GetComboPoints",
+        "IsPlayerSpell",
+        "GetInventoryItemID",
+        "GetPlayerInfoByGUID",
+        "UnitIsFriend",
+        "UnitIsFeignDeath",
+        "GetSpellTexture",
+        "GetActionCount",
+        "GetItemCount",
+        "GetActionInfo",
+        "GetMacroSpell",
+        "sort",
+        "WOW_PROJECT_MAINLINE",
+        "CreateFromMixins",
+        "Minimap",
+        "UnitExists",
+        "IsAddOnLoaded",
+        "tinsert",
+        "Mixin",
+        "GetNumGroupMembers",
+        "debugprofilestop",
+        "GetNumSubgroupMembers",
+        "C_NamePlate",
+        "tremove",
+        "GetSpellBookItemName",
+        "GetNumSpellTabs",
+        "GetSpellTabInfo",
+        "GetItemInfo",
+        "UnitCanAttack",
+        "UnitCanAssist",
+        "UnitIsDeadOrGhost",
+        "CheckInteractDistance",
+        "IsSpellInRange",
+        "IsItemInRange",
+        "GetInventoryItemLink",
+        "UnitIsVisible",
+        "GetInventorySlotInfo",
+        "GetSpecialization",
+        "GetSpecializationInfo",
+        "SetCVar",
+        "UnitLevel",
+        "CameraZoomIn",
+        "MoveViewRightStart",
+        "ConsoleExec",
+        "GetCameraZoom",
+        "MoveViewRightStop"
     ]
 }
