添加对Masque的支持

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -207,6 +207,8 @@
         "LFDMicroButton",
         "CollectionsMicroButton",
         "EJMicroButton",
-        "MainMenuMicroButton"
+        "MainMenuMicroButton",
+        "MultiBarBottomRight",
+        "MultiBarBottomRightButton1"
     ]
 }
