--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -209,6 +209,7 @@
         "EJMicroButton",
         "MainMenuMicroButton",
         "MultiBarBottomRight",
-        "MultiBarBottomRightButton1"
+        "MultiBarBottomRightButton1",
+        "DeveloperConsole"
     ]
 }
