完成商人界面的替换，下一步清理代码

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -212,6 +212,32 @@
         "MultiBarBottomRight",
         "MultiBarBottomRightButton1",
         "DeveloperConsole",
-        "xx"
+        "xx",
+        "ITEM_QUALITY_COLORS",
+        "MerchantFrame",
+        "MerchantItem1",
+        "MerchantItem2",
+        "MerchantItem3",
+        "MerchantItem4",
+        "MerchantItem1ItemButton",
+        "MerchantItem2ItemButton",
+        "MerchantFrameBg",
+        "MerchantFrameCloseButton",
+        "MerchantFrameInset",
+        "MerchantBuyBackItem",
+        "MerchantExtraCurrencyBg",
+        "MerchantExtraCurrencyInset",
+        "MerchantNextPageButton",
+        "MerchantPrevPageButton",
+        "MerchantFrameBottomLeftBorder",
+        "MerchantFrameTab1",
+        "MerchantFrameTab2",
+        "MerchantFrameLootFilter",
+        "MerchantSellAllJunkButton",
+        "MerchantMoneyBg",
+        "MerchantMoneyFrame",
+        "MerchantMoneyInset",
+        "MerchantPageText",
+        "MERCHANT"
     ]
 }
