--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "Lua.diagnostics.disable": [
         "undefined-field",
-        "inject-field"
+        "inject-field",
+        "unused-function"
     ],
     "Lua.diagnostics.globals": [
         "MainMenuBar",
