--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,8 @@
     "Lua.diagnostics.disable": [
         "undefined-field",
         "inject-field",
-        "unused-function"
+        "unused-function",
+        "param-type-mismatch"
     ],
     "Lua.diagnostics.globals": [
         "MainMenuBar",
